force-app/main/default/objects/Charge__c/Charge__c.object-meta.xml
<CustomObject>
    <label>Charge</label>
    <nameField>
        <displayFormat>QC-{0000000000}</displayFormat>
        <label>Charge</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>