force-app/main/default/objects/Charge__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount in Customer Currency</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>