force-app/main/default/objects/Charge__c/fields/Amount_Cust_Curr_Flow__c.field-meta.xml
<CustomField>
    <fullName>Amount_Cust_Curr_Flow__c</fullName>
    <label>Amount (Cust. Curr.) Flow</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>