force-app/main/default/objects/Charge__c/fields/Amount_Updated__c.field-meta.xml
<CustomField>
    <fullName>Amount_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amount Updated</label>
    <type>Checkbox</type>
</CustomField>