force-app/main/default/objects/Charge__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>This Field is to Sync with IFS, it is where users can go into more detail about the charge</description>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>