force-app/main/default/objects/Charge__c/fields/Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate__c</fullName>
    <formula>CASE(TEXT(Parent_Quote__r.Currency__c ), &apos;EUR&apos;, CURRENCYRATE(&apos;EUR&apos;), &apos;USD&apos;, CURRENCYRATE(&apos;USD&apos;),&apos;GBP&apos;, CURRENCYRATE(&apos;GBP&apos;), &apos;INR&apos;, CURRENCYRATE(&apos;INR&apos;),CURRENCYRATE(&apos;USD&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>