force-app/main/default/objects/Charge__c/fields/Parent_Quote__c.field-meta.xml
<CustomField>
    <fullName>Parent_Quote__c</fullName>
    <label>Parent Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Charges</relationshipLabel>
    <relationshipName>Charges</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>