force-app/main/default/objects/Charge__c/fields/Previous_Amount__c.field-meta.xml
<CustomField>
    <fullName>Previous_Amount__c</fullName>
    <label>Previous Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>