force-app/main/default/objects/Charge__c/fields/Quantity_Updated__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quantity Updated</label>
    <type>Checkbox</type>
</CustomField>