force-app/main/default/objects/Charge__c/fields/Quote_Customer_Currency__c.field-meta.xml
<CustomField>
    <fullName>Quote_Customer_Currency__c</fullName>
    <formula>Parent_Quote__r.DocumentCurrencySymbol__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Customer Currency</label>
    <type>Text</type>
</CustomField>