force-app/main/default/objects/Charge__c/fields/Record_Locked__c.field-meta.xml
<CustomField>
    <fullName>Record_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Record Locked</label>
    <type>Checkbox</type>
</CustomField>