force-app/main/default/objects/Charge__c/fields/Sent_to_IFS__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_IFS__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Sent to IFS</label>
    <type>Checkbox</type>
</CustomField>