force-app/main/default/objects/Charge__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Sequence</label>
    <type>AutoNumber</type>
</CustomField>