force-app/main/default/objects/Charge__c/fields/Status_Updated__c.field-meta.xml
<CustomField>
    <fullName>Status_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Status Updated</label>
    <type>Checkbox</type>
</CustomField>