force-app/main/default/objects/Charge__c/fields/Total_Charge__c.field-meta.xml
<CustomField>
    <fullName>Total_Charge__c</fullName>
    <formula>(Amount__c  /  Exchange_Rate__c) * Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>