force-app/main/default/objects/Charge__c/fields/Total_Charge_Cust_Curr__c.field-meta.xml
<CustomField>
    <fullName>Total_Charge_Cust_Curr__c</fullName>
    <formula>Total_Charge__c * CURRENCYRATE(TEXT(  Parent_Quote__r.Currency__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Charge (Cust. Curr.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>