force-app/main/default/objects/Charge__c/fields/Total_Charge_Cust_Curr_Flow__c.field-meta.xml
<CustomField>
    <fullName>Total_Charge_Cust_Curr_Flow__c</fullName>
    <label>Total Charge (Cust.Curr.) (Flow)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>