force-app/main/default/objects/Charge__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DOCUMENTATION</fullName>
                <label>Order Document Charge</label>
            </value>
            <value>
                <fullName>FIELD SERVICE</fullName>
                <label>Field Service Charge</label>
            </value>
            <value>
                <fullName>FLOW LAB</fullName>
                <label>Flow Lab Testing Charge</label>
            </value>
            <value>
                <fullName>PROCESSING CHARGE</fullName>
                <label>Product Processing Charge</label>
            </value>
            <value>
                <fullName>REDBALL FEE</fullName>
                <label>Expedited Service Charge</label>
            </value>
            <value>
                <fullName>RESTOCK</fullName>
                <label>Restock Charge For Returned Material</label>
            </value>
            <value>
                <fullName>SHIPPING</fullName>
                <label>Shipping Charge</label>
            </value>
            <value>
                <fullName>CANCELLATION</fullName>
                <label>Cancellation Charge</label>
            </value>
            <value>
                <fullName>START UP</fullName>
                <label>Start Up Charge</label>
            </value>
            <value>
                <fullName>NUCLEAR</fullName>
                <label>Nuclear Charge</label>
            </value>
            <value>
                <fullName>ITAR CHARGE</fullName>
                <label>ITAR Charge</label>
            </value>
            <value>
                <fullName>EAR CHARGE</fullName>
                <label>EAR Charge</label>
            </value>
            <value>
                <fullName>SPECIAL PACKING</fullName>
                <label>Special Packing Charge</label>
            </value>
            <value>
                <fullName>SET UP</fullName>
                <label>Set Up Charge</label>
            </value>
            <value>
                <fullName>WARRANTY</fullName>
                <label>Warranty Charge</label>
            </value>
            <value>
                <fullName>DEVELOPMENT</fullName>
                <label>Development Charge</label>
            </value>
            <value>
                <fullName>STORAGE</fullName>
                <label>Storage Charges</label>
            </value>
            <value>
                <fullName>ATTESTATION</fullName>
                <label>Document Attestation Charge</label>
            </value>
            <value>
                <fullName>CHANGE</fullName>
                <label>Change Order Charge</label>
            </value>
            <value>
                <fullName>INSPECTION</fullName>
                <label>Source Inspection Charge</label>
            </value>
            <value>
                <fullName>CERTIFICATION</fullName>
                <label>Certification Charge</label>
            </value>
            <value>
                <fullName>HANDLING</fullName>
                <label>Handling Charge</label>
            </value>
            <value>
                <fullName>BOND</fullName>
                <label>Bank Bonds</label>
            </value>
            <value>
                <fullName>MISC</fullName>
                <label>Miscellaneous Charge</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>