force-app/main/default/objects/Charge__c/validationRules/Lock_Record.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Record</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Profile.Name &lt;&gt; &apos;System Administrator&apos;, Record_Locked__c = true)</errorConditionFormula>
    <errorMessage>Charges cannot be edited if quote is Approved</errorMessage>
</ValidationRule>