force-app/main/default/objects/Charge__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sequence__c</columns>
    <columns>Type__c</columns>
    <columns>Amount__c</columns>
    <columns>Quantity__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>